removed borders and fixed alignment css

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -116,7 +116,7 @@
 					}
 
 					.resume {
-						padding: 0 1.95rem;
+						padding: 0 1.93rem;
 						// border: 1px solid red;
 					}
 
